--- a/add-signature.html
+++ b/add-signature.html
@@ -14,19 +14,7 @@
   <style>
     *{ box-sizing:border-box; font-family:'Inter',system-ui,-apple-system,'Segoe UI',Roboto,Arial; }
     html,body{ height:100%; margin:0; background:#071029; color:#e6eef8; }
-     body {
-      font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
-      min-height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      padding: 24px;
-      color: #f0f0f0;
-      background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('https://4kwallpapers.com/images/wallpapers/macos-big-sur-apple-layers-fluidic-colorful-wwdc-stock--1455.jpg');
-      background-size: cover;
-      background-position: center;
-      background-attachment: fixed;
-    }
+     body{ display:flex; align-items:flex-start; justify-content:center; padding:28px; }
 
     /* container will grow to fit all pages (no fixed height) */
     .container{
