--- a/index.html
+++ b/index.html
@@ -489,6 +489,15 @@
             <span>Convert documents with professional letterhead</span>
           </a>
 
+             <!-- PDF on Letterhead -->
+          <a href="apollo_new_letterhead.html" class="subject-button">
+            <div class="button-icon">
+              <i class="fas fa-file-contract"></i>
+            </div>
+            <h3>PDF on Apollo new Letterhead</h3>
+            <span>Convert documents with professional letterhead</span>
+          </a>
+
 
           <!-- crop pdf -->
           <a href="crop_pdf.html" class="subject-button">
