--- a/index.html
+++ b/index.html
@@ -499,6 +499,16 @@
           </a>
 
 
+            <!-- emergendy -->
+          <a href="emergency.html" class="subject-button">
+            <div class="button-icon">
+              <i class="fas fa-file-contract"></i>
+            </div>
+            <h3>Emergency</h3>
+            <span>one click signature seal and page no.</span>
+          </a>
+
+
           <!-- crop pdf -->
           <a href="crop_pdf.html" class="subject-button">
             <div class="button-icon">
